# chromatin-state-prediction

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt
playground/: AlphaGenome.ipynb  NT_Model_unbalanced_classes.ipynb  evaluate_enformer.py  finetune_enformer.py  training_dnabert.py
playground/archive/: NT_Model_full_genome.ipynb
playground/dnabert/: checkpoint_dnabert.py  debug_processed_data.npz  full_embeddings_training.py  get_embeddings.py  get_softmax.py  get_weights.py  ml_dnabert.py  preprocessing_dnabert.py  preprocessing_jd.sh  uw_get_softmax.py
sample/: .gitignore
templates/: __init__.py  data.py  enformer_dataset.py  enformer_trainer.py  split_data.py
