[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatin-state-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "transformers>=5.8.0",
    "torch>=2.11.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "ipykernel>=7.2.0",
    "pyarrow>=24.0.0",
    "accelerate>=1.13.0",
    "enformer-pytorch>=0.8.11",
    "deepspeed>=0.19.0; sys_platform == 'linux'",
    "paramiko>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["templates*"]

[project.scripts]
hello = "templates.hello:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
